# smart_camera_ws

src/smart_camera_bridge/: package.xml  setup.cfg  setup.py
src/smart_camera_bridge/launch/: bridge.launch.py
src/smart_camera_bridge/smart_camera_bridge/: __init__.py  bridge_node.py  camera_lifecycle_bridge.py  detection_bridge.py  rabbitmq.json  rabbitmq_config.py  video_stream_bridge.py  video_stream_bridge_test.py
src/smart_camera_interfaces/: CMakeLists.txt  package.xml
src/smart_camera_interfaces/srv/: AddCamera.srv  RemoveCamera.srv  UpdateCameraURL.srv
src/smart_camera_processor/: package.xml  setup.cfg  setup.py
src/smart_camera_processor/smart_camera_processor/: face_recog_node.py  tracking_node.py  yolo_node.py
src/smart_camera_source/: README.md  package.xml  setup.cfg  setup.py
src/smart_camera_source/smart_camera_source/: camera_manager_node.py  camera_node.py  dynamic_camera_node.py
