<?xml version="1.0"?>
<package format="3">
  <name>smart_camera_bridge</name>
  <version>0.1.0</version>
  <description>Bridge ROS2 detections to MQ (Kafka/RabbitMQ/MQTT)</description>

  <maintainer email="thanvanhai1021988@gmail.com">haicoi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kafka-python</exec_depend> <!-- Nếu dùng Kafka -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
