cmake_minimum_required(VERSION 3.8)
project(smart_camera_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/AddCamera.srv"
  "srv/RemoveCamera.srv"
  DEPENDENCIES builtin_interfaces std_msgs
)

# This line is crucial - add it!
ament_export_dependencies(rosidl_default_runtime)

ament_package()