<?xml version="1.0"?>
<package format="3">
  <name>smart_camera_processor</name>
  <version>0.1.0</version>
  <description>AI processor: YOLO, tracking, face recognition</description>

  <maintainer email="thanvanhai1021988@gmail.com">haicoi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
