<?xml version="1.0"?>
<package format="3">
  <name>smart_camera_source</name>
  <version>0.1.0</version>
  <description>ROS2 package for camera input (RTSP, file, USB) with dynamic management.</description>

  <maintainer email="thanvanhai1021988@gmail.com">haicoi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>smart_camera_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
